added optional pymol shutdown on exit, some cleanup of code and comments